--- a/src/components/Playground/styles.scss
+++ b/src/components/Playground/styles.scss
@@ -22,7 +22,7 @@
   }
 }
 
-$arch-deg: 90;
+$arch-deg: 20;
 $n-arches: 360 / $arch-deg;
 
 @mixin arches {
@@ -50,32 +50,38 @@ $n-arches: 360 / $arch-deg;
 }
 
 .secondary-spinner-component {
-  height: 320px;
-  width: 320px;
-  position: relative;
-  animation: rotate-all linear 4s 0s infinite forwards,
-    change-color linear 12s 0s infinite forwards;
-  border-color: #fe8f00;
-  .corner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 120px;
+  width: 120px;
+
+  .secondary-spinner-container{
+    animation: rotate-all linear 4s 0s infinite forwards,
+      change-color linear 12s 0s infinite forwards;
+    height: 100%;
+    width: 100%;
+    fill: #fe8f00;
+  }
+
+  .c {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    transform-origin: right bottom;
+    transform-origin: center center;
     transform: rotate(0);
     animation: linear 1.5s 0s infinite forwards;
-    border-color: inherit;
-    &:after {
+    fill: inherit;
+    .arch {
       display: block;
-      content: "";
-      height: 200%;
-      width: 200%;
-      border: 28px solid #fe8f00;
-      border-color: inherit;
-      border-radius: 50%;
-      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      shape-rendering: optimizeSpeed;
+      fill: inherit;
     }
   }
   @include arches;
@@ -93,33 +99,33 @@ $n-arches: 360 / $arch-deg;
 
 @keyframes change-color {
   0% {
-    border-color: #fe8f00;
+    fill: #fe8f00;
   }
   5% {
-    border-color: #fdcd01;
+    fill: #fdcd01;
   }
   10% {
-    border-color: #00a490;
+    fill: #00a490;
   }
   15% {
-    border-color: #009ce3;
+    fill: #009ce3;
   }
   20% {
-    border-color: #f20a3c;
+    fill: #f20a3c;
   }
   25% {
-    border-color: #0a94e2;
+    fill: #0a94e2;
   }
   30% {
-    border-color: #029be2;
+    fill: #029be2;
   }
   35% {
-    border-color: #c5255b;
+    fill: #c5255b;
   }
   40% {
-    border-color: #fe8f00;
+    fill: #fe8f00;
   }
   45% {
-    border-color: #fdcd01;
+    fill: #fdcd01;
   }
 }
